fixed broken spacing between checkboxes and radios, fixed margin of survey questions

--- a/src/App.css
+++ b/src/App.css
@@ -293,6 +293,10 @@ a:hover {
 
 /* Styling for contact and application forms */
 
+.Application {
+  font-size: 1.2em;
+}
+
 form {
   margin: 10%;
 }
@@ -300,6 +304,7 @@ form {
 textarea {
   border: 1px solid #f2f2f2;
   border-radius: 10px;
+  resize: none;
 }
 
 .select {
@@ -324,10 +329,11 @@ label {
 
 textarea, .text-input {
   margin-bottom: 4%;
+  resize: none;
 }
 
 .survey-question, p {
-  margin: 3% 0 -1% 0;
+  margin: 0.5em;
   font-family: 'Varela Round', sans-serif;
 }
 
@@ -339,6 +345,16 @@ input:focus,
 
 textarea:focus {
   border-bottom: 2px solid #4e899c;
+  resize: none;
+}
+
+.input-pair {
+  display: flex;
+  flex-direction: row;
+}
+
+.input-pair-checkbox, .input-pair-radio {
+  margin: 0.5em;
 }
 
 /* Mobile view optimization */
